@@ -1,3 +1,7 @@
+SimpleComplex/Locale 1.x, 2017-09-03
+------------------------------------
+- Locale text() 'default' parameter.
+
 SimpleComplex/Locale 1.x, 2017-08-24
 ------------------------------------
 - CLI commands must respect new command 'silent' property.
